@@ -4,8 +4,8 @@
   "clones": [
     {
       "timestamp": "2023-09-17T00:00:00Z",
-      "count": 2,
-      "uniques": 2
+      "count": 1,
+      "uniques": 1
     },
     {
       "timestamp": "2023-09-18T00:00:00Z",
@@ -71,6 +71,11 @@
       "timestamp": "2023-09-30T00:00:00Z",
       "count": 3,
       "uniques": 2
+    },
+    {
+      "timestamp": "2023-10-01T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
