@@ -1,3 +1,12 @@
+2023-10-01T08:10:49Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6369165592 # 1210
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-01
+* notice: last 14d: unq all: 3 33
+* notice: prev accum: outdated-unq outdated-all / unq all: 637 1005 / 659 1038
+* notice: next accum: outdated-unq outdated-all / unq all: 637 1005 / 660 1039
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -1 -1 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2023-09-17 2023-10-01]
+
 2023-09-30T16:10:03Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6364072270 # 1208
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-30
